@@ -1,3 +1,4 @@
+20110516 - Correcting brightness values provides by JPL to work correctly with stellarium by Bernd Kreuss
 20110319 - Patched by Bernd Kreuss to support the new type comet, absolute_magnitude and slope_parameter
 20101106 - Patch by Andrew Hood which enhances the title parsing and adds orbit Epoch
 20100520 - Patch by Andrew Hood which corrects the Perifocus
